<resources>
    <string name="app_name">SimpleDraw</string>
    <string name="photo_preview">PhotoPreview</string>
    <string name="photo_expanded">PhotoExpanded</string>
    <string name="color_preview">ColorPreview</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="value">0</string>
    <string name="done">Done</string>
    <string name="reset">Reset</string>
    <string name="tool_preview">ToolPreview</string>
    <string name="square">Square</string>
    <string name="circle">Circle</string>
    <string name="triangle">Triangle</string>
    <string name="star">Star</string>
    <string name="filled">Fill:</string>
    <string name="brush">Brush</string>
    <string name="eraser">Eraser</string>
    <string name="size">Size:</string>
</resources>
